<resources>
    <string name="app_name">Football Live</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_premier_league">Premier League</string>
    <string name="nav_v_league">V League</string>
    <string name="nav_champion_league">Champion League</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>


    <string name="menu_item_search">Search</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_clear_search">Clear search</string>


    <string name="btn_play_first_half">Play First Half</string>
    <string name="btn_play_second_half">Play Second Half</string>

    <string name="position">#</string>
    <string name="team">Team</string>
    <string name="gp">GP</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="pts">PTS</string>
</resources>
