<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_premier_league"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_premier_league"/>
        <item android:id="@+id/nav_v_league"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_v_league"/>
        <item android:id="@+id/nav_champion_league"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_champion_league"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share"/>
            <item android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send"/>
        </menu>
    </item>

</menu>